...
    <string name="title_activity_game_lobby">GameLobbyActivity</string>
    <string name="title_activity_rankings">Rankings</string>

    // create game lobby
    <string name="create_game_lobby_choose_game_name">Choose a game name</string>
    <string name="create_game_lobby_private_game">Private game :</string>
    <string name="create_game_lobby_min_num_players">Min number of players :</string>
    <string name="create_game_lobby_max_num_players">Max number of players :</string>
    <string name="create_game_lobby_num_rounds">Number of rounds :</string>
    <string name="create_game_lobby_round_duration">Round duration :</string>
    <string name="create_game_lobby_game_mode">Game mode :</string>
    <string name="create_game_lobby_initial_balance">Initial player balance:</string>
    <string name="create_game_lobby_game_code">Game code is: %s</string>
    <string name="create_game_lobby_create_game">Create game</string>
    <string name="create_game_lobby_landlord_num_properties">Initial number of buildings per Landlord:</string>

    // game lobby
    <string name="game_lobby_players_title">"Players: "</string>
    <string name="game_lobby_players_count">%s / %s</string>
    <string name="game_lobby_more_players_prefix">"At least "</string>
    <string name="game_lobby_more_players_count">%s more</string>
...
