...

        val focusManager = LocalFocusManager.current

        Column(
            modifier = Modifier
                .padding(horizontal = 16.dp, vertical = 25.dp)
                .testTag("create_game_menu"),
        ) {
            OutlinedTextField(
                value = gameName,
                onValueChange = { newText : String ->
                    gameName =
                        if (newText.matches(Regex("[a-zA-Z\\d]*")) && newText.length <= GAME_LOBBY_MAX_NAME_LENGTH)
...
                }),
                singleLine = true,
                label = { Text(getString(R.string.create_game_lobby_choose_game_name)) },
                modifier = Modifier
                    .fillMaxWidth(0.7f)
                    .align(Alignment.CenterHorizontally)
                    .testTag("game_name_text_field"),
                colors = UIElements.outlineTextFieldColors()
            )

            Row(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("private_game_row"),
                horizontalArrangement = Arrangement.SpaceBetween,
                verticalAlignment = Alignment.CenterVertically,
            ) {
                Text(getString(R.string.create_game_lobby_private_game), modifier = Modifier
                    .weight(1f)
                    .testTag("private_game_text"))

                Box(
                    contentAlignment = Alignment.Center,
                    modifier = Modifier
                        .weight(1f)
                        .fillMaxWidth()
                ) {
                    Checkbox(
                        modifier = Modifier
                            .offset(x = 14.dp)
                            .testTag("private_game_checkbox"),
                        checked = isPrivateGame,
                        onCheckedChange = {isPrivateGame = !isPrivateGame},
                        colors = UIElements.checkboxColors()
                    )
                }
            }
...
                )
            }

            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .testTag("create_game_lobby_column"),
                horizontalAlignment = Alignment.CenterHorizontally,
                verticalArrangement = Arrangement.Center
            ) {
                Text(
                    text = getString(R.string.create_game_lobby_game_code, futureGameCode.getNow("")),
                    Modifier.padding(bottom = 20.dp),
...
                        futureGameCode.thenAccept { code ->
                            createGameLobby(mContext, rules, gameName, isPrivateGame, code)
                        }
                    },
                    text = getString(R.string.create_game_lobby_create_game),
                    enabled = createGameEnabled,
                    testTag = "create_game_lobby_button"
                )
            }

        }
    }

...
